force-app/main/default/objects/Offer__c/fields/Autoplay__c.field-meta.xml
<CustomField>
    <fullName>Autoplay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autoplay</label>
    <type>Checkbox</type>
</CustomField>