force-app/main/default/objects/Offer__c/fields/Average_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Average_Order_Value__c</fullName>
    <formula>IF(Total_Revenue__c == 0 || Total_Transactions__c == 0, 0, Total_Revenue__c / Total_Transactions__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>