force-app/main/default/objects/Offer__c/fields/Commission_Earned__c.field-meta.xml
<CustomField>
    <fullName>Commission_Earned__c</fullName>
    <label>Commission Earned</label>
    <summarizedField>Affiliate_Offer__c.Commissions_Earned__c</summarizedField>
    <summaryForeignKey>Affiliate_Offer__c.Offer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>