force-app/main/default/objects/Offer__c/fields/Commission_Paid_Out__c.field-meta.xml
<CustomField>
    <fullName>Commission_Paid_Out__c</fullName>
    <label>Commission Paid Out</label>
    <summarizedField>Affiliate_Offer__c.Commissions_Paid__c</summarizedField>
    <summaryForeignKey>Affiliate_Offer__c.Offer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>