force-app/main/default/objects/Offer__c/fields/Commission_Payable__c.field-meta.xml
<CustomField>
    <fullName>Commission_Payable__c</fullName>
    <label>Commission Payable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>