force-app/main/default/objects/Offer__c/fields/Commissions_Not_Passed_Refund_Period__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Not_Passed_Refund_Period__c</fullName>
    <label>Commissions Not Passed Refund Period</label>
    <summarizedField>Affiliate_Offer__c.Commission_Not_Passed_Refund_Period__c</summarizedField>
    <summaryForeignKey>Affiliate_Offer__c.Offer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>