force-app/main/default/objects/Offer__c/fields/Commissions_Paid_And_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Paid_And_Refunded__c</fullName>
    <label>Commissions Paid and Refunded</label>
    <summarizedField>Affiliate_Offer__c.Commissions_Paid_And_Refunded__c</summarizedField>
    <summaryForeignKey>Affiliate_Offer__c.Offer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>