force-app/main/default/objects/Offer__c/fields/Commissions_Pending_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Pending_Withdrawal__c</fullName>
    <label>Commissions Pending Withdrawal</label>
    <summarizedField>Affiliate_Offer__c.Commissions_Pending_Withdrawal__c</summarizedField>
    <summaryForeignKey>Affiliate_Offer__c.Offer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>