force-app/main/default/objects/Offer__c/fields/First_Sales__c.field-meta.xml
<CustomField>
    <fullName>First_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Sales</label>
    <type>Checkbox</type>
</CustomField>