force-app/main/default/objects/Offer__c/fields/Offer_Description__c.field-meta.xml
<CustomField>
    <fullName>Offer_Description__c</fullName>
    <label>Offer Description</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>