force-app/main/default/objects/Offer__c/fields/Offer_Headline__c.field-meta.xml
<CustomField>
    <fullName>Offer_Headline__c</fullName>
    <label>Offer Headline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>