force-app/main/default/objects/Offer__c/fields/Offer_Subheadline__c.field-meta.xml
<CustomField>
    <fullName>Offer_Subheadline__c</fullName>
    <label>Offer Subheadline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>