force-app/main/default/objects/Offer__c/fields/OrderForm__c.field-meta.xml
<CustomField>
    <fullName>OrderForm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OrderForm</label>
    <referenceTo>OrderForm__c</referenceTo>
    <relationshipLabel>Offers</relationshipLabel>
    <relationshipName>Offers</relationshipName>
    <type>Lookup</type>
</CustomField>