force-app/main/default/objects/Offer__c/fields/Popup__c.field-meta.xml
<CustomField>
    <fullName>Popup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Popup</label>
    <type>Checkbox</type>
</CustomField>