force-app/main/default/objects/Offer__c/fields/Recalculate_Commission_Payable__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Commission_Payable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate Commission Payable</label>
    <type>Checkbox</type>
</CustomField>