force-app/main/default/objects/Offer__c/fields/Store_Cookie__c.field-meta.xml
<CustomField>
    <fullName>Store_Cookie__c</fullName>
    <label>Store Cookie (In Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>