force-app/main/default/objects/Offer__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Subscription</label>
    <type>Checkbox</type>
</CustomField>