force-app/main/default/objects/Offer__c/fields/Total_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Total_Transactions__c</fullName>
    <label>Total Transactions</label>
    <summarizedField>Affiliate_Offer__c.Total_Transactions__c</summarizedField>
    <summaryForeignKey>Affiliate_Offer__c.Offer__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>