force-app/main/default/objects/Offer__c/recordTypes/Cart.recordType-meta.xml
<RecordType>
    <fullName>Cart</fullName>
    <active>true</active>
    <label>Cart</label>
</RecordType>