force-app/main/default/objects/Offer__c/recordTypes/Funnel.recordType-meta.xml
<RecordType>
    <fullName>Funnel</fullName>
    <active>true</active>
    <label>Funnel</label>
</RecordType>