force-app/main/default/objects/Offer__c/validationRules/Type_of_Commission.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_of_Commission</fullName>
    <active>true</active>
    <errorConditionFormula>IF (!ISNULL(Percent_Of_Price__c) &amp;&amp; !ISNULL(Fixed_Amount__c), TRUE, FALSE)</errorConditionFormula>
    <errorMessage>You can use either a "Percent Of Price" or a "Fixed Amount".</errorMessage>
</ValidationRule>