force-app/main/default/objects/Offer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Offer_Name__c</columns>
    <columns>Commission_Payable__c</columns>
    <columns>Active__c</columns>
    <columns>Product__c</columns>
    <columns>OrderForm__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>